--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <header class="encabezado">
             <h1><img src="Imagen/Logo.png" class="logo Alura"></h1>
-            <h2 class="titulo">Alura Oracle ONE - Clallenge 2</h2>
+            <h2 class="titulo">Alura Oracle ONE - Clallenge 2 - Juego del Ahorcado</h2>
         </header>        
         <main>
             <section class="contenedor">
